--- a/2016-IRISA-INRIA/resume.tex
+++ b/2016-IRISA-INRIA/resume.tex
@@ -3,38 +3,53 @@
 \name{Stewart S. Grant}
 \address{3549 Puget Drive, Vancouver, BC }
 \address{(604) 970-2469}
-\address{v9c9@ugrad.cs.ubc.ca}
+\address{sgrant09@cs.ubc.ca}
 \begin{resume}
 \section{RESEARCH}
-{\sl DInv} \hfill 2015\\
+{\sl Dinv} \hfill 2015-2016\\
     Distributed System Invariant Detector
 \begin{itemize} \itemsep -2pt
-        \item DInv detects data invariants in distributed systems by capturing dataflow between hosts, and relating it temporally.
-        \item Expanded the system to capture temporal interactions across an arbitrary number of hosts, and to analyse Go source code across multiple repositories
-        \item Developed and implemented algorithms for ordering, and associating dataflow across multiple hosts.
-        \item Research Mentored by Dr.Ivan Beschastnikh, University of British Columbia
+        \item Dinv detects data invariants in distributed systems by temporally associating logged variables.
+        \item Developed novel distributed state merging algorithms, and automatic insturmentation techniques.
+        %\item Research Mentored by Dr.Ivan Beschastnikh, University of British Columbia
         \item https://bitbucket.org/bestchai/dinv
 \end{itemize}
 
-{\sl Repograms} \hfill 2015\\
-	Code Repository Visualization, and Comparison Tool
+{\sl Dovid} \hfill 2015-2016\\
+    Distributed System Documenter
 \begin{itemize} \itemsep -2pt
-        \item Repograms visualizes development metrics in Git code repositories to assist researchers in their choice of code bases to study.
-        \item Developed three analysis metrics, providing proximate development time for researches unfamiliar with the tool.
-        \item Research mentored by Daniel Rozenberg M.S \& Dr.Ivan Beschastnikh, University of British Columbia
-		\item http://repograms.net
+        \item Dovid automatically generated documenation for distributed systems.
+        \item Documentation includes discriptions of variables affected, and affecting network traffic, and network communication points
+        %\item Research Mentored by Dr.Ivan Beschastnikh and Dr.Reid Holmes, University of British Columbia
+        \item https://bitbucket.org/wantonsolutions/Dovid
 \end{itemize}
 
+{\sl Pangaea [In development]} \hfill 2016\\
+    Distributed State Visualizer
+\begin{itemize} \itemsep -2pt
+        \item Pangaea plots distributed snapshots by grouping snapshots with similar states.
+        %\item Research Mentored by Dr.Ivan Beschastnikh, University of British Columbia
+        \item https://www.github.com/zipengliu/Pangaea
+\end{itemize}
+
+{\sl \textit{All research mentored by Dr.Ivan Beschastnikh}}\\
+
 \section{PUBLICATIONS}
+
+{\sl 
+    Checking distributed systems using likely state invariants. 
+    Stewart Grant, Hendrick Cech, Ivan Beschastnikh. 
+    \it{Currently under submissions}}
+
 {\sl Stewart Grant, Sam Creed, Ivan Beschastnikh. Inferring data invariants in distributed systems. In \it{Proceedings of the 25th ACM Symposium on Operating Systems Principles, SOSP 2015}, Monterey, California, USA. (Poster)}
 
 \section{EDUCATION}
-{\sl Bachelors of Science,} Computer Science	\hfill 2015\\
+{\sl MSc,} Computer Science\\
 University of British Colombia, Vancouver, BC \\
-Expected: 2015
+Expected 2018
 
-{\sl Associate of Science,} Computer Science \hfill 2011-2013\\
-Langara College, Vancouver, BC\\
+{\sl Bachelors of Science,} Computer Science	\hfill 2016\\
+University of British Colombia, Vancouver, BC \\
 
 
 \section{EMPLOYMENT} 
