--- a/2016-IRISA-INRIA/resume.tex
+++ b/2016-IRISA-INRIA/resume.tex
@@ -10,7 +10,7 @@
     Distributed System Invariant Detector
 \begin{itemize} \itemsep -2pt
         \item Dinv detects data invariants in distributed systems by temporally associating logged variables.
-        \item Developed novel distributed state merging algorithms, and automatic insturmentation techniques.
+        \item Developed novel distributed state merging algorithms, and automatic instrumentation techniques.
         %\item Research Mentored by Dr.Ivan Beschastnikh, University of British Columbia
         \item https://bitbucket.org/bestchai/dinv
 \end{itemize}
@@ -18,8 +18,8 @@
 {\sl Dovid} \hfill 2015-2016\\
     Distributed System Documenter
 \begin{itemize} \itemsep -2pt
-        \item Dovid automatically generated documenation for distributed systems.
-        \item Documentation includes discriptions of variables affected, and affecting network traffic, and network communication points
+        \item Dovid automatically generated documentation for distributed systems.
+        \item Documentation includes descriptions of variables affected, and affecting network traffic, and network communication points.
         %\item Research Mentored by Dr.Ivan Beschastnikh and Dr.Reid Holmes, University of British Columbia
         \item https://bitbucket.org/wantonsolutions/Dovid
 \end{itemize}
@@ -53,23 +53,19 @@ University of British Colombia, Vancouver, BC \\
 
 
 \section{EMPLOYMENT} 
-{\sl Undergraduate Research Assistant} \hfill 2015\\
+{\sl Undergraduate Research Assistant} \hfill 2015-2016\\
 	University of British Columbia, Department of Computer Science
 \begin{itemize} \itemsep -2pt
-        \item Designed and developed Dinv, a tool for detecting data invariants in distributed system.
+        \item Designed and developed Dinv, a tool for checking data invariants in distributed system.
     \end{itemize}
-{\sl Teaching Assistant} \hfill 2015\\
+{\sl Teaching Assistant} \hfill 2015-2016\\
 	University of British Columbia, Department of Computer Science
 \begin{itemize} \itemsep -2pt
-		\item Oversaw the development of web applications, involving distributed data persistence, Social media integration, and user interface design.
-	\end{itemize}
-{\sl Lab Assignment Author} \hfill 2013\\
-	Langara College Computer Science Department
-	\begin{itemize} \itemsep -2pt
-			\item Developed lab assignments for Object Oriented Programming, and introduction to assembly, CPSC 1181, and 2180 respectively.
+		\item Three semester TA in software engineering.
 	\end{itemize}
 
 \section{AWARDS}
+{\sl NSERC USRA Award} \hfill 2016\\
 {\sl Rick Sample Summer Internship} \hfill 2015\\
 {\sl Science Undergraduate Research Experience Award} \hfill 2015\\
 
@@ -89,13 +85,13 @@ University of British Colombia, Vancouver, BC \\
     
 
 \section{COMPUTER \\ SKILLS} 
-	{\sl Programming Languages:} C, Go, Java, Bash, Ruby, MASM\\
+	{\sl Programming Languages:} Go, C, Bash, JavaScript, Java\\
 	{\sl Operating System:} Linux, Windows\\
 	{\sl Text Manipulation:} Vim, Git, \LaTeX \\
 
 \section{INTERESTS}
-	{\sl Computing:} Operating Systems, Distributed Systems, Algorithm Design and implementation, and System Analysis.\\
-	{\sl Extra Curricular:} Rock Climbing, Experimental Music, Hiking, Gardening.\\
+	{\sl Computing:}  Distributed Systems, Operating Systems, Algorithm Design and implementation, and System Analysis.\\
+	{\sl Extra Curricular:} Rock Climbing, Experimental Music, Hiking, Juggling.\\
 
 \end{resume}
 \end{document}
