added jss review

--- a/2016-IRISA-INRIA/resume.tex
+++ b/2016-IRISA-INRIA/resume.tex
@@ -37,7 +37,7 @@
 \section{PUBLICATIONS}
 
 {\sl 
-    Checking distributed systems using likely state invariants. 
+    Inferring and Asserting Distributed System Invariants. \\
     Stewart Grant, Hendrick Cech, Ivan Beschastnikh. 
     \it{Currently under submissions}}
 
@@ -53,6 +53,11 @@ University of British Colombia, Vancouver, BC \\
 
 
 \section{EMPLOYMENT} 
+{\sl Research Intern} \hfill 2017\\
+    INRIA Rennes 1, ASAP (As scalable as possible)
+\begin{itemize} \itemsep -2pt
+        \item Built a framework for model checking distributed, from runtime logs
+    \end{itemize}
 {\sl Undergraduate Research Assistant} \hfill 2015-2016\\
 	University of British Columbia, Department of Computer Science
 \begin{itemize} \itemsep -2pt
@@ -71,6 +76,12 @@ University of British Colombia, Vancouver, BC \\
 
 
 \section{VOLUNTEER}
+
+{\sl Reviewer} \hfill 2017
+    \begin{itemize}
+        \item Journal of Systems and Software
+    \end{itemize}
+
 {\sl Computer Science Student Society Officer} \hfill 2015
     \begin{itemize}
         \item Assisted with fund raisers, and event organization
