updated with splash and CHI review

--- a/CV/resume.tex
+++ b/CV/resume.tex
@@ -120,8 +120,14 @@ Langara College, Vancouver, BC\\
 
 \section{VOLUNTEER}
 
+{\sl Conference Volunteer} \hfill 2017
+    \begin{itemize}
+        \item Student Voulenteer SPLASH 2017
+    \end{itemize}
+
 {\sl Reviewer} \hfill 2017
     \begin{itemize}
+        \item ACM CHI 2018
         \item Journal of Systems and Software
     \end{itemize}
 
