updated dancing in the dark

--- a/CV/resume.tex
+++ b/CV/resume.tex
@@ -65,6 +65,11 @@
 \section{PUBLICATIONS}
 
 {\sl 
+    Dancing in the Dark: Private Multi-Party Machine Learning in an Untrusted Setting \\
+    Clement Fung, Jamie Koerner, Stewart Grant, Ivan Beschastnikh. 
+    \it{Currently under submissions}}
+
+{\sl 
     Inferring and Asserting Distributed System Invariants. \\
     Stewart Grant, Hendrick Cech, Ivan Beschastnikh. 
     \it{Currently under submissions}}
@@ -120,12 +125,12 @@ Langara College, Vancouver, BC\\
 
 \section{VOLUNTEER}
 
-{\sl Conference Volunteer} \hfill 2017
+{\sl Conference Volunteering} \hfill 2017
     \begin{itemize}
         \item Student Voulenteer SPLASH 2017
     \end{itemize}
 
-{\sl Reviewer} \hfill 2017
+{\sl Reviewing} \hfill 2017
     \begin{itemize}
         \item ACM CHI 2018
         \item Journal of Systems and Software
