--- a/CV/resume.tex
+++ b/CV/resume.tex
@@ -7,6 +7,21 @@
 \address{https://wantonsolutions.github.io/}
 \begin{resume}
 
+\section{PUBLICATIONS}
+
+{\sl 
+    Dancing in the Dark: Private Multi-Party Machine Learning in an Untrusted Setting \\
+    Clement Fung, Jamie Koerner, Stewart Grant, Ivan Beschastnikh. 
+    \it{Currently under submissions}}
+
+{\sl 
+    Inferring and Asserting Distributed System Invariants. \\
+    Stewart Grant, Hendrick Cech, Ivan Beschastnikh. \\
+    To appear in International Conference ICSE 2018 \\
+    }
+
+{\sl Stewart Grant, Sam Creed, Ivan Beschastnikh. Inferring data invariants in distributed systems. In \it{Proceedings of the 25th ACM Symposium on Operating Systems Principles, SOSP 2015}, Monterey, California, USA. (Poster)}
+
 \section{RESEARCH}
 
 {\sl Dara [In development]} \hfill 2017\\
@@ -17,12 +32,21 @@
         \item https://github.com/wantonsolutions/dara
 \end{itemize}
 
+{\sl TorMentor} \hfill 2017\\
+    Anonymous multi party machine learning
+\begin{itemize} \itemsep -2pt
+        \item A collaborative machine learning framework that operates through Tor.
+        %\item Research Mentored by Dr.Ivan Beschastnikh, University of British Columbia
+        \item https://github.com/DistributedML/TorML
+\end{itemize}
+
 {\sl Dviz [In development]} \hfill 2016\\
     Distributed State Visualizer
 \begin{itemize} \itemsep -2pt
         \item Pangaea plots distributed snapshots by grouping snapshots with similar states.
         %\item Research Mentored by Dr.Ivan Beschastnikh, University of British Columbia
-        \item https://www.github.com/zipengliu/Pangaea
+        \item https://ww            <p> TorMentor is a collaborative machine learning framework that operates through Tor. TorMentor clients participate in a federated learning algorithm. Clients are protected from the de-anonymization of their data via differential privacy.</p>
+w.github.com/zipengliu/Pangaea
 \end{itemize}
 
     {\sl Obeah [In development]} \hfill 2016\\
@@ -60,21 +84,6 @@
 {\sl \textit{All research mentored by Dr.Ivan Beschastnikh}}\\
 
 
-
-
-\section{PUBLICATIONS}
-
-{\sl 
-    Dancing in the Dark: Private Multi-Party Machine Learning in an Untrusted Setting \\
-    Clement Fung, Jamie Koerner, Stewart Grant, Ivan Beschastnikh. 
-    \it{Currently under submissions}}
-
-{\sl 
-    Inferring and Asserting Distributed System Invariants. \\
-    Stewart Grant, Hendrick Cech, Ivan Beschastnikh. 
-    \it{Currently under submissions}}
-
-{\sl Stewart Grant, Sam Creed, Ivan Beschastnikh. Inferring data invariants in distributed systems. In \it{Proceedings of the 25th ACM Symposium on Operating Systems Principles, SOSP 2015}, Monterey, California, USA. (Poster)}
 
 \section{EDUCATION}
 {\sl MSc,} Computer Science\\
