updated resume for killiam award

--- a/CV/resume.tex
+++ b/CV/resume.tex
@@ -7,20 +7,33 @@
 \address{https://wantonsolutions.github.io/}
 \begin{resume}
 
-\section{PUBLICATIONS}
+    \section{PUBLICATIONS (Papers)}
+
+
+{\sl 
+    Inferring and Asserting Distributed System Invariants. \\
+    Stewart Grant, Hendrick Cech, Ivan Beschastnikh. \\
+    International Conference on Software Engineering ICSE 2018 \\
+    }
 
 {\sl 
     Dancing in the Dark: Private Multi-Party Machine Learning in an Untrusted Setting \\
     Clement Fung, Jamie Koerner, Stewart Grant, Ivan Beschastnikh. 
     \it{Currently under submissions}}
 
-{\sl 
-    Inferring and Asserting Distributed System Invariants. \\
-    Stewart Grant, Hendrick Cech, Ivan Beschastnikh. \\
-    To appear in International Conference ICSE 2018 \\
-    }
+\section{PUBLICATIONS (Posters)}
 
-{\sl Stewart Grant, Sam Creed, Ivan Beschastnikh. Inferring data invariants in distributed systems. In \it{Proceedings of the 25th ACM Symposium on Operating Systems Principles, SOSP 2015}, Monterey, California, USA. (Poster)}
+{\sl Stewart Grant, Ivan Beschastnikh. 
+    Distributed Test Case Generation using Model Inference with Dara
+    \it{Proceedings of the 15th
+    USENIX Symposium on Networked Systems Design and Implementation, NSDI 2018},
+    Renton, Washington, USA. (Poster)}
+
+{\sl Stewart Grant, Sam Creed, Ivan Beschastnikh. Inferring data
+    invariants in distributed systems. In \it{Proceedings of the 25th
+    ACM Symposium on Operating Systems Principles, SOSP 2015},
+    Monterey, California, USA. (Poster)}
+
 
 \section{RESEARCH}
 
@@ -86,9 +99,12 @@ w.github.com/zipengliu/Pangaea
 
 
 \section{EDUCATION}
-{\sl MSc,} Computer Science\\
+{\sl PhD,} Computer Science \\
+University of California San Diego \\
+Expected 2024 \\
+
+{\sl MSc,} Computer Science \hfill 2018 \\
 University of British Colombia, Vancouver, BC \\
-Expected 2018
 
 {\sl Bachelors of Science,} Computer Science	\hfill 2016\\
 University of British Colombia, Vancouver, BC \\
