added VMware resume

--- a/2021-VMware/resume.tex
+++ b/2021-VMware/resume.tex
@@ -81,22 +81,6 @@
         \item https://github.com/DistributedML/TorML
 \end{itemize}
 
-{\sl Dviz} \hfill 2016\\
-    Distributed State Visualizer
-\begin{itemize} \itemsep -2pt
-        \item Pangaea plots distributed snapshots by grouping snapshots with similar states.
-        %\item Research Mentored by Dr.Ivan Beschastnikh, University of British Columbia
-        \item https://ww            <p> TorMentor is a collaborative machine learning framework that operates through Tor. TorMentor clients participate in a federated learning algorithm. Clients are protected from the de-anonymization of their data via differential privacy.</p>
-w.github.com/zipengliu/Pangaea
-\end{itemize}
-
-{\sl Obeah} \hfill 2016\\
-    SMT guided distributed fuzz tester
-\begin{itemize} \itemsep -2pt
-        \item Obeah fuzzes systems by modifying messages specifically to trigger unusual control flow.
-        %\item Research Mentored by Dr.Ivan Beschastnikh, University of British Columbia
-        \item https://www.github.com/wantonsolutions/obeah
-\end{itemize}
 
 {\sl Dinv} \hfill 2015-2018\\
     Distributed System Invariant Detector
@@ -104,22 +88,6 @@ w.github.com/zipengliu/Pangaea
         \item Developed novel distributed state merging algorithms, and automatic instrumentation techniques.
         %\item Research Mentored by Dr.Ivan Beschastnikh, University of British Columbia
         \item https://bitbucket.org/bestchai/dinv
-\end{itemize}
-
-{\sl Dovid} \hfill 2015-2016\\
-    Distributed System Documenter
-\begin{itemize} \itemsep -2pt
-        \item Dovid automatically generated documentation for distributed systems.
-        \item Documentation includes descriptions of variables affected, and affecting network traffic, and network communication points.
-        %\item Research Mentored by Dr.Ivan Beschastnikh and Dr.Reid Holmes, University of British Columbia
-        \item https://bitbucket.org/wantonsolutions/Dovid
-\end{itemize}
-
-{\sl Repograms} \hfill 2015\\
-	Code Repository Visualization, and Comparison Tool
-\begin{itemize} \itemsep -2pt
-        \item Developed three analysis metrics, providing proximate development time for researches unfamiliar with the tool.
-		\item http://repograms.net
 \end{itemize}
 
 
@@ -219,40 +187,15 @@ Langara College, Vancouver, BC\\
          \item Assisted in the rehabilitation, and ongoing care of injured birds of prey
     \end{itemize}
 }
-    
 
 \section{COMPUTER \\ SKILLS} 
-	{\sl Programming Languages:} Go, C, Bash, JavaScript, Java\\
+	{\sl Programming Languages:} C, Go, C++, Bash, Python\\
 	{\sl Operating System:} Linux, Windows\\
 	{\sl Text Manipulation:} Vim, Git, \LaTeX \\
 
-\section{HOBBY \\ PROJECTS}
-{\sl Distributed Clocks} \hfill 2015-2017\\
-    Optimized inter-operable vector clock library
-\begin{itemize} \itemsep -2pt
-		\item Distributed clocks implements vector clocks in Go, Java, C++ and C
-		\item https://github.com/DistributedClocks
-\end{itemize}
-
-{\sl Pollock} \hfill 2015\\
-	Abstract Github contribution visualizer
-\begin{itemize} \itemsep -2pt
-		\item Pollock generates splatter painting based on the contribution history of Github repositories. The Thickness and direction of the paint splatters is derived from the individual contributors, and the frequency and volume of their commits.
-		\item Written in, Java, Bash, Ruby, Processing2
-		\item https://github.com/wantonsolutions/Pollock
-\end{itemize}
-
-{\sl ChocOS} \hfill 2015\\
-	Operating System Kernel
-\begin{itemize} \itemsep -2pt
-		\item ChocOS is a minimal operating system, providing memory management, process scheduling, keyboard IO, and IPC via signalling and message passing.
-		\item written in C
-		\item https://github.com/wantonsolutions/ChocOS
-\end{itemize}
-
 \section{INTERESTS}
-	{\sl Computing:}  Distributed Systems, Operating Systems, Algorithm Design and implementation, and System Analysis.\\
-	{\sl Extra Curricular:} Rock Climbing, Experimental Music, Hiking, Juggling.\\
+	{\sl Computing:}  Distributed Systems, Networking, Resource Disaggregation.\\
+	{\sl Extra Curricular:} Rock Climbing, Experimental Music, Hiking, Juggling, Twisty Puzzles.\\
 
 \end{resume}
 \end{document}
