added resume for facebook

--- a/CV/resume.tex
+++ b/CV/resume.tex
@@ -10,6 +10,12 @@
     \section{PUBLICATIONS (Papers)}
 
 {\sl 
+    In-network Contention Resolution for Disaggregated Memory \\
+    Stewart Grant, Alex Snoeren\\
+    WORDS 2021 \\
+    }
+
+{\sl 
     SmartNIC Performance Isolation with FairNIC \\
     Stewart Grant, Anil Yelam, Maxwell Bland, Alex Snoeren\\
     Sigcomm 2020 \\
@@ -50,7 +56,7 @@
         \item https://github.com/wantonsolutions/warm
 \end{itemize}
 
-{\sl Doppleganger} [In devlopment] \hfill 2021\\
+{\sl Daronpon} [In devlopment] \hfill 2021\\
     Sub RTT replica selection in data centers
 \begin{itemize} \itemsep -2pt
         \item microsecond level load balancing for bursty data center networks.
@@ -189,6 +195,11 @@ Langara College, Vancouver, BC\\
 {\sl Effective Writing Group Organizer} {\hfill 2019 - 2020}
     \begin{itemize}
         \item Group and lesson organizer, discussion lead
+    \end{itemize}
+
+{\sl Early Research Scholars Program} {\hfill 2019 - 2020}
+    \begin{itemize}
+        \item Phd advisor for 4 undergraduate students
     \end{itemize}
 
 {\sl Faculty Candidate Student Panel Organizer} {\hfill 2019}
