added meta fellowship, and started Meta Application

--- a/2022-Facebook/resume.tex
+++ b/2022-Facebook/resume.tex
@@ -7,7 +7,13 @@
 %%\address{2601, 3869 Miramar Street}
 \begin{resume}
 
-    \section{PUBLICATIONS (Papers)}
+\section{PUBLICATIONS (Papers)}
+
+{\sl 
+    SwordBox: Sharing Disaggregated Memory without Skewing Performance \\
+    Stewart Grant, Alex Snoeren\\
+    (Currently under submission) 2022 \\
+    }
 
 {\sl 
     In-network Contention Resolution for Disaggregated Memory \\
@@ -33,33 +39,21 @@
     Archive 2019
     }
 
-\section{PUBLICATIONS (Posters)}
-
-{\sl Stewart Grant, Ivan Beschastnikh. 
-    Distributed Test Case Generation using Model Inference with Dara
-    \it{Proceedings of the 15th
-    USENIX Symposium on Networked Systems Design and Implementation, NSDI 2018},
-    Renton, Washington, USA. (Poster)}
-
-{\sl Stewart Grant, Sam Creed, Ivan Beschastnikh. Inferring data
-    invariants in distributed systems. In \it{Proceedings of the 25th
-    ACM Symposium on Operating Systems Principles, SOSP 2015},
-    Monterey, California, USA. (Poster)}
-
 \section{EDUCATION}
 {\sl PhD,} Computer Science \\
 University of California San Diego \\
 Expected 2024 \\
 
 {\sl MSc,} Computer Science \hfill 2018 \\
-University of British Columbia, Vancouver, BC \\
+University of British Colombia, Vancouver, BC \\
 
 {\sl Bachelors of Science,} Computer Science	\hfill 2016\\
-University of British Columbia, Vancouver, BC \\
+University of British Colombia, Vancouver, BC \\
 
 {\sl Associate of Science,} Computer Science \hfill 2011-2013\\
 Langara College, Vancouver, BC\\
 
+\pagebreak
 
 \section{EMPLOYMENT} 
 
@@ -87,13 +81,13 @@ Langara College, Vancouver, BC\\
         \item Designed and developed Dinv, a tool for checking data invariants in distributed system.
     \end{itemize}
 
-
 {\sl Teaching Assistant UBC} \hfill 2015-2016\\
 	University of British Columbia, Department of Computer Science
 \begin{itemize} \itemsep -2pt
         \item One semester TA in distributed systems 416 \hfill 2017
 		\item Three semester TA in software engineering 310 \hfill 2015-2016\\
 	\end{itemize}
+
 {\sl Lab Assignment Author} \hfill 2013\\
 	Langara College Computer Science Department
 	\begin{itemize} \itemsep -2pt
@@ -102,6 +96,7 @@ Langara College, Vancouver, BC\\
     
 
 \section{AWARDS}
+{\sl Meta PhD Fellowship} \hfill 2022 \\
 {\sl NSERC USRA Award} \hfill 2016\\
 {\sl Rick Sample Summer Internship} \hfill 2015\\
 {\sl Science Undergraduate Research Experience Award} \hfill 2015\\
@@ -121,7 +116,7 @@ Langara College, Vancouver, BC\\
 
 {\sl Faculty Candidate Student Panel Organizer} {\hfill 2019}
     \begin{itemize}
-        \item Ran weekly intervew group with faculty
+        \item Ran weekly intervew group discussions with faculty
             candidates, and interested PhD students
      \end{itemize}
 
@@ -136,6 +131,24 @@ Langara College, Vancouver, BC\\
         \item Journal of Systems and Software
     \end{itemize}
 
+% {\sl Computer Science Student Society Officer} \hfill 2015
+%     \begin{itemize}
+%         \item Assisted with fund raisers, and event organization
+%         \item Volunteered with treasury for money counts
+%     \end{itemize}
+
+{\sl OWL ( Orphaned Wildlife Foundation )} {\hfill 2007 - 2008}
+    \begin{itemize}
+         \item Assisted in the rehabilitation, and ongoing care of injured birds of prey
+    \end{itemize}
+    
+
+\section{COMPUTER \\ SKILLS} 
+	{\sl Programming Languages:} Go, C, Bash, JavaScript, Java\\
+	{\sl Operating System:} Linux, Windows\\
+	{\sl Networking RDMA \& DPDK:} Mellanox\\
+	{\sl Text Manipulation:} Vim, Git, \LaTeX \\
+
 \section{HOBBY \\ PROJECTS}
 {\sl Distributed Clocks} \hfill 2015-2017\\
     Optimized inter-operable vector clock library
@@ -145,8 +158,8 @@ Langara College, Vancouver, BC\\
 \end{itemize}
 
 \section{INTERESTS}
-	{\sl Computing:}  Distributed Systems, Operating Systems, Algorithm Design and implementation, and System Analysis.\\
-	{\sl Extra Curricular:} Rock Climbing, Experimental Music, Hiking, Juggling, Pre-Raphelite.\\
+	{\sl Computing:}  Distributed Systems, Networking, Operating Systems, Algorithm Design and implementation, and System Analysis.\\
+	{\sl Extra Curricular:} Rock Climbing, Experimental Music, Hiking, Juggling.\\
 
 \end{resume}
 \end{document}
