--- a/CV/resume.tex
+++ b/CV/resume.tex
@@ -10,6 +10,16 @@
     \section{PUBLICATIONS (Papers)}
 
 {\sl 
+    SwordBox: Sharing Disaggregated Memory without Skewing Performance \\
+    Stewart Grant, Alex Snoeren\\
+    [Currently under submission] 2022 \\
+    }
+{\sl 
+    Daronpon: Datacenter-scale Sub-RTT Replica Selection for Low-latency Applications \\
+    Shu-Ting Wang, Stewart Grant, George Porter, Alex Snoeren\\
+    [Currently under submission] 2022 \\
+    }
+{\sl 
     In-network Contention Resolution for Disaggregated Memory \\
     Stewart Grant, Alex Snoeren\\
     WORDS 2021 \\
@@ -49,14 +59,14 @@
 
 \section{RESEARCH PROJECTS}
 
-{\sl Warm} [In devlopment] \hfill 2021\\
+{\sl Swordbox} \hfill 2021\\
     Resolving write contention for disaggregated memory
 \begin{itemize} \itemsep -2pt
         \item Warm reorganizes RDMA calls in flight to accelerate access to disaggregated data structures.
         \item https://github.com/wantonsolutions/warm
 \end{itemize}
 
-{\sl Daronpon} [In devlopment] \hfill 2021\\
+{\sl Daronpon} \hfill 2021\\
     Sub RTT replica selection in data centers
 \begin{itemize} \itemsep -2pt
         \item microsecond level load balancing for bursty data center networks.
@@ -185,6 +195,7 @@ Langara College, Vancouver, BC\\
     
 
 \section{AWARDS}
+{\sl Meta PhD Fellowship \hfill 2022} \\
 {\sl NSERC USRA Award} \hfill 2016\\
 {\sl Rick Sample Summer Internship} \hfill 2015\\
 {\sl Science Undergraduate Research Experience Award} \hfill 2015\\
