--- a/CV/resume.tex
+++ b/CV/resume.tex
@@ -12,13 +12,15 @@
 {\sl 
     SwordBox: Sharing Disaggregated Memory without Skewing Performance \\
     Stewart Grant, Alex Snoeren\\
-    [Currently under submission] 2022 \\
+    Currently under submission 2022
     }
+
 {\sl 
     Daronpon: Datacenter-scale Sub-RTT Replica Selection for Low-latency Applications \\
     Shu-Ting Wang, Stewart Grant, George Porter, Alex Snoeren\\
-    [Currently under submission] 2022 \\
+    Currently under submission 2022
     }
+
 {\sl 
     In-network Contention Resolution for Disaggregated Memory \\
     Stewart Grant, Alex Snoeren\\
@@ -156,6 +158,12 @@ Langara College, Vancouver, BC\\
 
 \section{EMPLOYMENT} 
 
+{\sl Research Intern} \hfill 2022\\
+	Microsoft Research Redmond
+\begin{itemize} \itemsep -2pt
+        \item Worked on disagreggated network functions \hfill 2022
+	\end{itemize}
+
 {\sl Teaching Assistant UCSD} \hfill 2021\\
 	University of California San Diego
 \begin{itemize} \itemsep -2pt
@@ -195,7 +203,7 @@ Langara College, Vancouver, BC\\
     
 
 \section{AWARDS}
-{\sl Meta PhD Fellowship \hfill 2022} \\
+{\sl Meta PhD Fellowship} \hfill 2022 \\
 {\sl NSERC USRA Award} \hfill 2016\\
 {\sl Rick Sample Summer Internship} \hfill 2015\\
 {\sl Science Undergraduate Research Experience Award} \hfill 2015\\
