added google resume and CV

--- a/2023-Google/resume.tex
+++ b/2023-Google/resume.tex
@@ -12,14 +12,14 @@
 {\sl 
     SwordBox: Sharing Disaggregated Memory without Skewing Performance \\
     Stewart Grant, Alex Snoeren\\
-    Currently under submission 2022
+    Currently under submission 2024
     }
 
-{\sl 
-    Daronpon: Datacenter-scale Sub-RTT Replica Selection for Low-latency Applications \\
-    Shu-Ting Wang, Stewart Grant, George Porter, Alex Snoeren\\
-    Currently under submission 2022
-    }
+% {\sl 
+%     Daronpon: Datacenter-scale Sub-RTT Replica Selection for Low-latency Applications \\
+%     Shu-Ting Wang, Stewart Grant, George Porter, Alex Snoeren\\
+%     Currently under submission 2022
+%     }
 
 {\sl 
     In-network Contention Resolution for Disaggregated Memory \\
