--- a/CV/resume.tex
+++ b/CV/resume.tex
@@ -12,20 +12,15 @@
 {\sl 
     SwordBox: Sharing Disaggregated Memory without Skewing Performance \\
     Stewart Grant, Alex Snoeren\\
-    Currently under submission 2022
-    }
+    Currently under submission 2024
+}
 
 {\sl 
-    Daronpon: Datacenter-scale Sub-RTT Replica Selection for Low-latency Applications \\
-    Shu-Ting Wang, Stewart Grant, George Porter, Alex Snoeren\\
-    Currently under submission 2022
-    }
+    Disaggregating Stateful Network Functions\\
+    Deepak Bansal, Gerald DeGrace, Rishabh Tewari, Michal Zygmunt, James Grantham, Silvano Gai, Mario Baldi, Krishna Doddapaneni, Arun Selvarajan, Arunkumar Arumugam, Balakrishnan Raman, Avijit Gupta, Sachin Jain, Deven Jagasia, Evan Langlais, Pranjal Srivastava, Rishiraj Hazarika, Neeraj Motwani, Soumya Tiwari, Stewart Grant, Ranveer Chandra, Srikanth Kandula \\
+    NSDI 2023\\
+}
 
-{\sl 
-    In-network Contention Resolution for Disaggregated Memory \\
-    Stewart Grant, Alex Snoeren\\
-    WORDS 2021 \\
-    }
 
 {\sl 
     SmartNIC Performance Isolation with FairNIC \\
@@ -39,10 +34,18 @@
     International Conference on Software Engineering ICSE 2018 \\
     }
 
+\section{PUBLICATIONS (Workshops)}
+
+{\sl
+    Limited Access: The Truth Behind Far Memory \\
+    Anil Yelam, Stewart Grant (co-first), Enze Liu, Radhika Niranjan Mysore, Marcos K Aguilera, Amy Ousterhout, Alex C Snoeren \\
+    WORDS 2023 \\
+    }
+
 {\sl 
-    Dancing in the Dark: Private Multi-Party Machine Learning in an Untrusted Setting \\
-    Clement Fung, Jamie Koerner, Stewart Grant, Ivan Beschastnikh \\
-    Archive 2019
+    In-network Contention Resolution for Disaggregated Memory \\
+    Stewart Grant, Alex Snoeren\\
+    WORDS 2021 \\
     }
 
 \section{PUBLICATIONS (Posters)}
@@ -207,6 +210,19 @@ Langara College, Vancouver, BC\\
 {\sl NSERC USRA Award} \hfill 2016\\
 {\sl Rick Sample Summer Internship} \hfill 2015\\
 {\sl Science Undergraduate Research Experience Award} \hfill 2015\\
+
+\section{CONFERENCING}
+{\sl MPI Saarbruken POST-SOSP Seminar (2023)- Invited Talk}
+{\sl SysDW 2023 - Conference Talk}
+{\sl Meta Faculty Summit 2023 - Invited Talk}
+{\sl Google Networking Summit 2022 - Lighting Talk}
+{\sl UCSD CNS 2022 - Talk}
+{\sl WORDS 2021 - Conference Talk}
+{\sl SIGCOMM 2020 - Talk}
+{\sl ICSE 2018 - Conference Talk}
+{\sl PNW PLSE 2018 - Conference Talk}
+{\sl NSDI 2018 - Poster Presenter}
+{\sl Splash 2017 - Voulenteer}
 
 
 \section{VOLUNTEER}
